[package]
name = "client"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.5.0"
openh264 = "0.6.0"
captrs = '0.3.1'

utils ={ path = "../utils"}
log = "0.4"

[build-dependencies]
slint-build = "1.5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
