[package]
name = "server"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2021"
build = "build.rs"

[dependencies]
slint = "1.3.2"
rand = "0.8.5"

[build-dependencies]
slint-build = "1.3.2"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false