[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
 
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
rust_xlsxwriter = {version = '0.64',features = ["wasm"]}

console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false